--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,194 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
-  padding: 0;
+  border: 0;
   margin: 0;
+  padding: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+img {
+  width: 100%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+header {
+  border-radius: 0 0 10px 10px;
+  background-color: pink;
+  padding: 1rem 0.5rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+main {
+  background-color: grey;
+  min-height: 100vh;
+  display: flex;
+  position: relative;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.logo {
+  width: 35px;
+  height: 35px;
+}
+
+.logo-box {
+  padding: 0 0.5rem;
+  flex-basis: 10%;
+  font-size: 16px;
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.logo-box h1 {
+  display: none;
+}
+
+.login-box {
+  flex-basis: 30%;
+  font-size: 1rem;
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 0.5rem;
+}
+
+.login-box-img {
+  display: none;
+}
+
+.mobile-nav {
+  position: fixed;
+  width: 60%;
+  padding: 1rem 0;
+  background-color: lime;
+  z-index: 10;
+  border-radius: 0 10px 10px 0;
+  height: 100vh;
+  top: 0;
+
+}
+
+.mn-open {
+  left: 0;
+  animation: navbar-open 1s;
+}
+
+.mn-close {
+  left: -100%;
+  animation: navbar-close 1s;
+}
+
+.mobile-nav ul {
+  width: 100%;
+  list-style-type: none;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem 0;
+}
+
+.mobile-nav ul li {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-bottom: 3px solid white;
+}
+
+.mobile-nav-close-box {
+  padding: 1rem 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.mobile-nav-close {
+  width: 40px;
+  padding: 0 0.4rem;
+  height: 40px;
+  font-size: 2rem;
+  border: 3px solid white;
+  border-radius: 5px;
+  color: white;
+  background-color: transparent;
+}
+
+.mobile-nav-bg {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+}
+
+.mn-bg {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.mn-bg-trans {
+  background-color: transparent;
+}
+
+@keyframes navbar-close {
+  from {
+    left: 0;
   }
+
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes navbar-open {
+  from {
+    left: -100%;
+  }
+
+  to {
+    left: 0;
+  }
+}
+
+.king {
+  background-color: blueviolet;
+}
+
+.card-container {
+  flex-basis: 100%;
+  display: flex;
+  flex-flow: column;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+.card {
+  padding: 2rem 1rem;
+  background-color: #efefef;
+  border-radius: 10px;
+}
+
+.card-importance {
+  height: 5px;
+  width: 100%;
+  border-radius: 20px;
+  background-color: red;
+}
+
+.burger-box {
+  flex-basis: 30%;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+}
+
+.burger-button {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
 }
