Fixed updating and deleting bugs will implement the same for users tomorrow. need to link up routes, then start adding Auth and middleware before deploying for hosting

--- a/app/globals.css
+++ b/app/globals.css
@@ -157,6 +157,7 @@ main {
 
 .mn-bg-trans {
   background-color: transparent;
+  pointer-events: none;
 }
 
 @keyframes navbar-close {
@@ -196,7 +197,7 @@ main {
 
 .card {
   background-color: #efefef;
-  border-radius: 10px;
+  border-radius: 5px;
   height: 300px;
   box-shadow: -2px 5px 10px var(--shadow);
 }
@@ -275,12 +276,11 @@ main {
 }
 
 .project-badge {
-  background-color: var(--UI-main);
-  color: white;
+  border: 2px solid var(--UI-main);
   display: inline-block;
   border-radius: 50px;
   display: flex;
-  width: 120px;
+  width: 50%;
   padding: 0.6rem 0.6rem;
   align-items: center;
   justify-content: space-evenly;
@@ -322,6 +322,13 @@ main {
   flex-basis: 10%;
 }
 
-#delete-button {
+#delete-bug-button {
   background-color: var(--delete);
+}
+
+input {
+  background-color: #70e000;
+  padding: 1rem;
+  border-radius: 10px;
+  border: 1px solid black;
 }
