--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,14 @@ header {
   color: white;
 }
 
+footer {
+  background-color: var(--UI-main);
+  padding: 1rem 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+
 .nav-link {
   display: block;
   text-decoration: none;
@@ -53,7 +61,7 @@ main {
   min-height: 100vh;
   display: flex;
   position: relative;
-  background-color: var(--BG-main);
+  background-color: #efefef;
 }
 
 .logo {
@@ -361,4 +369,43 @@ main {
 
 .form-bg-container {
   padding: 1rem;
+}
+
+.login-form {
+  border-radius: 5px;
+  width: 90%;
+  max-height: 300px;
+  padding: 2rem;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.login-label {
+  font-weight: bold;
+  display: flex;
+  flex-flow: column;
+  margin-bottom: 1rem;
+  gap: 0.5rem;
+}
+
+.login-input {
+  padding: 1rem;
+  border: 1px solid black;
+  width: 80%;
+  border-radius: 5px;
+}
+
+.login-button {
+  padding: 1rem;
+  background-color: var(--UI-main);
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.create-bug-form {
+  border-radius: 5px;
+  width: 90%;
+  padding: 2rem;
+  margin: 0 auto;
+  background-color: white;
 }
