--- a/app/globals.css
+++ b/app/globals.css
@@ -59,9 +59,10 @@ footer {
 
 main {
   min-height: 100vh;
+  padding: 2rem 0.2rem;
   display: flex;
   position: relative;
-  background-color: #efefef;
+  background-color: #e5e6e4;
 }
 
 .logo {
@@ -213,7 +214,7 @@ main {
 }
 
 .card {
-  background-color: #efefef;
+  background-color: white;
   border-radius: 5px;
   height: 300px;
   box-shadow: -2px 5px 10px var(--shadow);
@@ -339,36 +340,127 @@ main {
   flex-basis: 10%;
 }
 
-#delete-bug-button {
+.delete-bug-button.delete-bug-button {
   background-color: var(--delete);
 }
 
-.form-container {
+/* User Card */
+
+.user-card {
   background-color: #efefef;
+  border-radius: 5px;
+  height: 265px;
+  box-shadow: -2px 5px 10px var(--shadow);
+}
+
+.user-card-header {
+  height: 70px;
+  padding: 0.5rem;
+  background-color: var(--UI-main);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px 5px 0 0;
+}
+
+.user-card-header h2 {
+  padding: 0.3rem;
+  background-color: white;
+  border-radius: 5px;
+  width: 75%;
+  text-align: center;
+  box-shadow: -2px 5px 10px var(--UI-main-dark);
+}
+
+.user-card-email {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-card-email p {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.user-card-main {
   padding: 1rem;
+  padding-bottom: 0;
+}
+
+.user-card-main p {
+  margin-bottom: 0.3rem;
+}
+
+.user-card-buttons {
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card-button {
+  padding: 1rem;
+  color: white;
+  font-weight: bold;
+  background-color: var(--action);
   border-radius: 5px;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0.5rem;
+  width: 100px;
+}
+
+.delete-user-button.delete-user-button {
+  background-color: var(--delete);
+}
+
+
+
+/* form */
+
+
+
+
+.form-container {
+  border-radius: 5px;
+  width: 90%;
+  padding: 2rem;
+  padding-top: 4rem;
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: -2px 5px 10px var(--shadow);
+}
+
+.form-label {
+  font-weight: bold;
+  display: flex;
   flex-flow: column;
-  align-items: flex-start;
-  min-width: 100%;
+  margin-bottom: 1rem;
+  gap: 0.5rem;
 }
 
 .form-input {
-  padding: 1rem;
+  padding: 0.8rem;
   border: 1px solid black;
   width: 100%;
   border-radius: 5px;
 }
 
-.form-label {
-  display: flex;
-  flex-flow: column;
-  margin-bottom: 2rem;
-  gap: 1rem;
+.form-area {
+  height: 100px;
 }
 
-.form-bg-container {
+.form-button {
   padding: 1rem;
+  background-color: var(--UI-main);
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.form-buttons {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .login-form {
@@ -389,7 +481,7 @@ main {
 }
 
 .login-input {
-  padding: 1rem;
+  padding: 0.8rem;
   border: 1px solid black;
   width: 80%;
   border-radius: 5px;
@@ -402,10 +494,41 @@ main {
   border-radius: 5px;
 }
 
-.create-bug-form {
-  border-radius: 5px;
+
+/* Ghost Card */
+
+.bug-ghost-header-inner {
+  padding: 2rem 0.6rem;
+  border-radius: 0 0 0 0;
+  text-align: center;
+  border-bottom: 1px solid grey;
   width: 90%;
-  padding: 2rem;
   margin: 0 auto;
-  background-color: white;
+}
+
+.card-ghost {
+  background-color: #efefef;
+  border-radius: 5px;
+  height: 300px;
+  box-shadow: -2px 5px 10px var(--shadow);
+  animation: ghost 2s infinite;
+}
+
+@keyframes ghost {
+  0% {
+    background-color: white;
+  }
+
+  50% {
+    background-color: grey;
+  }
+
+  100% {
+    background-color: white;
+  }
+}
+
+
+.beer {
+  color: lime;
 }
