--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,7 @@ main {
   min-height: 100vh;
   padding: 2rem 0.2rem;
   display: flex;
+  flex-direction: column;
   position: relative;
   background-color: #e5e6e4;
 }
@@ -528,7 +529,76 @@ main {
   }
 }
 
+/* filter form */
 
-.beer {
-  color: lime;
+.bug-filter {
+  background-color: white;
+  color: black;
+  box-shadow: -2px 5px 10px var(--shadow);
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 5px 5px 0 0;
+  border-bottom: 5px solid var(--UI-main-dark);
+  padding: 1rem;
+  margin-inline: 1rem;
+}
+
+
+
+
+.bug-filter-button {
+  padding: 0.2rem 1rem;
+  background-color: var(--UI-main);
+  color: white;
+  border-radius: 5px;
+}
+
+.bug-filter-select {
+  width: 100px;
+  background-color: transparent;
+  padding: 0.4rem;
+  border-bottom: 1px solid var(--UI-main);
+}
+
+.bug-filter-select option {
+  color: black;
+  background-color: white;
+}
+
+.bug-info-box {
+  background-color: white;
+  border-radius: 5px;
+  margin: 0.5rem 1rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: -2px 5px 10px var(--shadow);
+  border-bottom: 5px solid var(--UI-main-dark);
+}
+
+.bug-info-section {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.bug-info-colour {
+  height: 20px;
+  width: 20px;
+  border-radius: 5px;
+}
+
+.green {
+  background-color: var(--bug-low);
+}
+
+.yellow {
+  background-color: var(--bug-med);
+}
+
+.red {
+  background-color: var(--bug-high);
 }
