--- a/app/globals.css
+++ b/app/globals.css
@@ -43,10 +43,58 @@ header {
 
 footer {
   background-color: var(--UI-main);
-  padding: 1rem 0.5rem;
+  padding: 1rem;
   display: flex;
-  justify-content: space-between;
+  flex-flow: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
   color: white;
+}
+
+.footer-project {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 60%;
+  gap: 0.5rem;
+}
+
+.footer-project img {
+  width: 20px;
+  height: 20px;
+}
+
+.footer-social {
+  flex-basis: 30%;
+}
+
+.footer-social ul {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+  list-style: none;
+  padding: 1rem;
+}
+
+.footer-social a {
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  padding: 0.4rem 0.6rem;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.4rem;
+  width: 110px;
+}
+
+.footer-name {
+  flex-basis: 30%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .nav-link {
@@ -93,6 +141,10 @@ main {
 
 .logo-box h1 {
   display: none;
+}
+
+.login-container {
+  padding-top: 5rem;
 }
 
 .login-box {
@@ -215,6 +267,28 @@ main {
 
 .main-content-container {
   padding: 2rem 0.2rem;
+}
+
+.form-content-container {
+  padding: 2rem 0.2rem;
+  min-height: 100vh;
+}
+
+.user-main-content-container {
+  padding: 0.5rem 0.2rem;
+}
+
+.user-card-container {
+  flex-basis: 100%;
+  margin: 0 auto;
+  margin-top: 1rem;
+  display: flex;
+  flex-flow: column;
+  gap: 0.5rem;
+  padding: 1rem;
+  width: 380px;
+  height: 800px;
+  overflow-y: scroll;
 }
 
 
@@ -373,7 +447,7 @@ main {
 .user-card {
   background-color: #efefef;
   border-radius: 5px;
-  height: 265px;
+  height: 280px;
   box-shadow: -2px 5px 10px var(--shadow);
 }
 
@@ -405,6 +479,10 @@ main {
 .user-card-email p {
   font-weight: bold;
   font-size: 1.5rem;
+  max-width: 35ch;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .user-card-main {
@@ -568,6 +646,20 @@ main {
   margin-bottom: 0.5rem;
 }
 
+.bug-filter-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bug-filter-flex img {
+  flex-basis: 25%;
+}
+
+.bug-filter-flex p {
+  flex-basis: 55%;
+}
+
 
 
 
@@ -582,7 +674,8 @@ main {
   width: 100px;
   background-color: transparent;
   padding: 0.4rem;
-  border-bottom: 1px solid var(--UI-main);
+  border-radius: 5px;
+  border: 1px solid var(--UI-main);
 }
 
 .bug-filter-select option {
@@ -632,6 +725,8 @@ main {
 
 .profile-container {
   background-color: white;
+  width: 90%;
+  margin: 0 auto;
   border-radius: 5px;
   box-shadow: -2px 5px 10px var(--shadow);
 }
@@ -644,7 +739,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 2px;
+  border-radius: 5px 5px 0 0;
 }
 
 .profile-image-container img {
@@ -694,7 +789,8 @@ main {
   background-color: white;
   border-radius: 5px;
   box-shadow: -2px 5px 10px var(--shadow);
-
+  width: 90%;
+  margin: 0 auto;
 }
 
 .bug-expanded-info h2 {
@@ -708,19 +804,18 @@ main {
 
 .bug-expanded-info-section {
   border-top: 3px solid var(--UI-main);
-  border-bottom: 1px solid var(--UI-main-dark);
   padding: 1rem;
-  margin-bottom: 1rem;
+  padding-bottom: 2rem;
 }
 
 .bug-expanded-info-label {
-  background-color: var(--UI-main);
-  color: white;
+  border: 2px solid var(--UI-main);
   border-radius: 5px 5px 0 0;
   padding: 0.2rem;
+  margin-left: 0.2rem;
   text-align: center;
   border-bottom: none;
-  width: 100px;
+  width: 120px;
 }
 
 
@@ -740,28 +835,73 @@ main {
   display: none;
 }
 
-
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 490px) {
   .card-container {
     width: 480px;
     height: 950px;
   }
 
-  .bug-filter {
-    width: 550px;
-
+  .flex-badge {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    margin-block: 1rem 1.2rem;
+    padding-inline: 0.5rem;
   }
 
+  .project-badge {
+    width: 40%;
+    padding: 0.6rem 0.6rem;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .bug-card-buttons {
+    padding-inline: 0.5rem;
+  }
+
+  .bug-card-header-inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .user-card-container {
+    width: 480px;
+    height: 950px;
+  }
+}
+
+
+@media only screen and (min-width: 665px) {
+
+  .bug-filter,
   .bug-info-box {
     width: 550px;
     margin: 0 auto;
   }
 
 
+  .login-form {
+    width: 75%
+  }
+
+
+  footer {
+    flex-flow: row;
+    justify-content: space-evenly;
+  }
+
+  .footer-project {
+    flex-basis: 25%;
+  }
+
+
 }
 
 
-@media only screen and (min-width: 950px) {
+
+@media only screen and (min-width: 1024px) {
   .burger-box {
     display: none;
   }
@@ -774,13 +914,24 @@ main {
     padding: 1.5rem 5rem;
   }
 
-  .card-container {
-    height: 750px;
+  .login-form {
+    width: 600px;
+  }
+
+  .card-container,
+  .user-card-container {
+    height: 720px;
   }
 
   .grid-container {
     display: grid;
     grid-template-columns: 300px 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .form-grid-container {
+    display: grid;
+    grid-template-columns: 300px 1fr 500px 1fr;
     grid-template-rows: 1fr;
   }
 
@@ -807,28 +958,36 @@ main {
   }
 
 
-  .main-content-container {
+  .main-content-container,
+  .user-main-content-container,
+  .form-content-container {
     grid-column: 3/4;
   }
+
+  .footer-project {
+    flex-basis: 30%;
+    justify-content: flex-start;
+  }
+
+  .footer-social ul {
+    flex-basis: 45%;
+    flex-flow: row;
+  }
+
+
 }
 
 
-@media only screen and (min-width: 2300px) {
+@media only screen and (min-width: 1440px) {
 
   .grid-container {
-    grid-template-columns: 400px 1fr 1fr 1fr;
+    grid-template-columns: 300px 1fr 1fr 1fr;
   }
 
-  .card-container {
-    height: 1400px;
+
+  .card-container,
+  .user-card-container {
+    height: 100vh;
   }
 
-  .non-mobile-nav li {
-    font-size: 2rem;
-  }
-
-  .non-mobile-nav li img {
-    height: 30px;
-    width: 30px;
-  }
 }
