--- a/app/globals.css
+++ b/app/globals.css
@@ -106,9 +106,9 @@ footer {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 0.3rem;
+  gap: 0.4rem;
   cursor: pointer;
-  width: 90%;
+  width: 100%;
 
 
 }
@@ -119,7 +119,6 @@ footer {
 }
 
 main {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -146,10 +145,12 @@ main {
 }
 
 .login-container {
+  height: 80vh;
   padding-top: 5rem;
 }
 
 .login-box {
+
   flex-basis: 30%;
   font-size: 1rem;
   gap: 1rem;
@@ -172,17 +173,17 @@ main {
   border-radius: 0 10px 10px 0;
   height: 100vh;
   top: 0;
+  transition: transform 0.3s ease-in;
 
 }
 
 .mn-open {
-  left: 0;
-  animation: navbar-open 1s;
+  transform: translateX(0);
+
 }
 
 .mn-close {
-  left: -100%;
-  animation: navbar-close 1s;
+  transform: translateX(-100%);
 }
 
 .mobile-nav ul {
@@ -283,7 +284,6 @@ main {
 .user-card-container {
   flex-basis: 100%;
   margin: 0 auto;
-  margin-top: 1rem;
   display: flex;
   flex-flow: column;
   gap: 0.5rem;
@@ -450,7 +450,7 @@ main {
 .user-card {
   background-color: #efefef;
   border-radius: 5px;
-  height: 280px;
+  min-height: 275px;
   box-shadow: -2px 5px 10px var(--shadow);
 }
 
@@ -591,6 +591,7 @@ main {
 }
 
 .login-form {
+  border: 2px solid var(--UI-main);
   border-radius: 5px;
   width: 90%;
   max-height: 300px;
@@ -610,7 +611,7 @@ main {
 
 .login-input {
   padding: 0.8rem;
-  border: 1px solid black;
+  border: 1px solid var(--UI-main);
   width: 80%;
   border-radius: 5px;
 }
@@ -654,6 +655,16 @@ main {
   100% {
     background-color: white;
   }
+}
+
+.loading-container {
+  width: 50%;
+  margin: 3rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  font-size: 1.3rem;
 }
 
 /* filter form */
