--- a/app/globals.css
+++ b/app/globals.css
@@ -91,6 +91,10 @@ footer {
   width: 110px;
 }
 
+.footer-social a:hover {
+  border: 1px solid grey;
+}
+
 .footer-name {
   flex-basis: 30%;
   display: flex;
@@ -201,7 +205,7 @@ main {
   padding: 0.2rem;
   font-size: 1.5rem;
   font-weight: bold;
-  background-color: var(--Nav-link-bg);
+  background-color: var(--UI-main);
 }
 
 .mobile-nav-close-box {
@@ -264,9 +268,6 @@ main {
   }
 }
 
-.king {
-  background-color: blueviolet;
-}
 
 .main-content-container {
   padding: 2rem 0.2rem;
@@ -581,6 +582,7 @@ main {
 .form-button {
   padding: 1rem;
   background-color: var(--UI-main);
+  color: white;
   font-weight: bold;
   border-radius: 5px;
 }
@@ -676,6 +678,7 @@ main {
   box-shadow: -2px 5px 10px var(--shadow);
   display: flex;
   justify-content: space-evenly;
+  align-items: end;
   border-radius: 5px 5px 0 0;
   border-bottom: 5px solid var(--UI-main-dark);
   padding: 1rem;
@@ -702,11 +705,12 @@ main {
 
 
 .bug-filter-button {
-  padding: 0.2rem 1rem;
+  padding: 0 1rem;
   background-color: var(--UI-main);
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  height: 45px;
 }
 
 .bug-filter-select {
@@ -901,13 +905,21 @@ main {
   padding: 1rem;
 }
 
+.cookie-banner h3 {
+  background-color: var(--UI-main);
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  width: 60%;
+  text-align: center;
+}
+
 .cookie-banner p {
   padding: 0.2rem;
 }
 
 .cookie-warning {
-  background-color: var(--delete);
-  color: white;
+  border: 3px solid var(--delete);
   text-align: center;
   border-radius: 5px;
 }
@@ -943,15 +955,22 @@ main {
 
 /* custom scrollbar */
 
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #fefefe;
+}
+
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 12px;
+  background-color: #e5e6e4;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--UI-main-dark);
-  border-radius: 520px;
-  border: 6px solid transparent;
-  background-clip: content-box;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: grey;
 }
 
 
@@ -1026,6 +1045,10 @@ main {
 
   .footer-project {
     flex-basis: 25%;
+  }
+
+  .footer-social ul {
+    align-items: center;
   }
 
   .cookie-buttons {
@@ -1135,6 +1158,11 @@ main {
   .login-container {
     height: 90vh;
     padding-top: 20rem;
+  }
+
+  .footer-social {
+    display: flex;
+    justify-content: center;
   }
 
   .cookie-banner {
