--- a/app/globals.css
+++ b/app/globals.css
@@ -383,6 +383,29 @@ main {
   font-size: 1.2rem;
 }
 
+.recycle-name {
+  background-color: var(--UI-main);
+  width: 40%;
+  padding: 0.2rem 1rem;
+  margin: 0 1rem;
+  border-radius: 5px;
+  color: white;
+}
+
+.bug-card-p-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.6rem;
+  gap: 0.8rem;
+  font-size: 1.2rem;
+}
+
+.bug-h {
+  font-weight: bold;
+}
+
+
 
 .bug-card-text img {
   flex-basis: 10%;
@@ -621,6 +644,14 @@ main {
 .login-button {
   padding: 1rem;
   background-color: var(--UI-main);
+  font-weight: bold;
+  border-radius: 5px;
+  color: white;
+}
+
+.login-button-loading {
+  padding: 1rem;
+  background-color: var(--BG-main);
   font-weight: bold;
   border-radius: 5px;
   color: white;
@@ -1052,6 +1083,8 @@ main {
 
 .cookie-warning {
   border: 3px solid var(--delete);
+  background-color: var(--delete);
+  color: white;
   text-align: center;
   border-radius: 5px;
 }
@@ -1075,13 +1108,11 @@ main {
 }
 
 #accept {
-  background-color: var(--action);
-  color: white;
+  border: 3px solid var(--action);
 }
 
 #decline {
-  background-color: var(--delete);
-  color: white;
+  border: 3px solid var(--delete);
 
 }
 
