--- a/app/globals.css
+++ b/app/globals.css
@@ -385,7 +385,7 @@ main {
 
 .recycle-name {
   background-color: var(--UI-main);
-  width: 40%;
+  width: 60%;
   padding: 0.2rem 1rem;
   margin: 0 1rem;
   border-radius: 5px;
@@ -1133,6 +1133,24 @@ main {
 
 }
 
+.flashCard {
+  background-color: var(--action);
+  width: 70%;
+  padding: 1rem;
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: -2px 5px 10px var(--shadow);
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+
 
 /* custom scrollbar */
 
@@ -1328,6 +1346,10 @@ main {
     min-height: 80px;
   }
 
+  .flashCard {
+    width: 40%;
+  }
+
   .cookie-banner {
     width: 50%;
   }
@@ -1360,6 +1382,11 @@ main {
   .footer-social {
     display: flex;
     justify-content: center;
+  }
+
+  .flashCard {
+    width: 20%;
+    left: 55%
   }
 
   .cookie-banner {
