--- a/app/globals.css
+++ b/app/globals.css
@@ -1073,7 +1073,6 @@ main {
 
 .cookie-banner {
   background-color: white;
-  border: 2px solid var(--UI-main);
   border-top: 20px solid var(--UI-main);
   position: fixed;
   bottom: 5px;
@@ -1082,6 +1081,7 @@ main {
   transform: translate(-50%, 0);
   border-radius: 5px;
   padding: 1rem;
+  box-shadow: -2px 5px 10px var(--shadow);
 }
 
 .cookie-banner h3 {
@@ -1204,6 +1204,7 @@ main {
   color: white;
   font-weight: bold;
   cursor: pointer;
+  margin-bottom: 0.5rem;
 }
 
 .delete-card form {
@@ -1219,8 +1220,8 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.1rem;
-  border-bottom: 3px solid black;
+  padding: 0.3rem 0.1rem;
+  border-bottom: 3px solid var(--BG-main);
   font-weight: bold;
 }
 
@@ -1352,6 +1353,12 @@ main {
   .cookie-buttons {
     width: 30%;
   }
+
+
+
+  .delete-card {
+    width: 60%;
+  }
 }
 
 
@@ -1457,6 +1464,11 @@ main {
     width: 50%;
   }
 
+  .delete-card {
+    width: 25%;
+    margin-left: 18rem;
+  }
+
 
 }
 
@@ -1502,6 +1514,11 @@ main {
 
   .cookie-buttons {
     width: 20%;
+  }
+
+  .delete-card {
+    width: 15%;
+    margin-left: 19rem;
   }
 
 }
