--- a/app/globals.css
+++ b/app/globals.css
@@ -717,7 +717,7 @@ main {
   box-shadow: -2px 5px 10px var(--shadow);
   display: flex;
   justify-content: space-evenly;
-  align-items: end;
+  align-items: flex-end;
   border-radius: 5px 5px 0 0;
   border-bottom: 5px solid var(--UI-main-dark);
   padding: 1rem;
@@ -1191,9 +1191,14 @@ main {
   background-color: white;
   border-radius: 5px;
   width: 90%;
-  height: 240px;
+  margin: auto;
+  height: 280px;
   box-shadow: -2px 5px 10px var(--shadow);
   padding: 1rem;
+}
+
+.none-pointer {
+  pointer-events: none;
 }
 
 .delete-card-close {
@@ -1465,7 +1470,8 @@ main {
   }
 
   .delete-card {
-    width: 25%;
+    width: 35%;
+    height: 300px;
     margin-left: 18rem;
   }
 
@@ -1517,8 +1523,8 @@ main {
   }
 
   .delete-card {
-    width: 15%;
-    margin-left: 19rem;
+    width: 20%;
+    margin-left: 48%;
   }
 
 }
