Cleaned up ui and bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -225,9 +225,9 @@ main {
 
 .mobile-nav-close {
   width: 40px;
-  padding: 0 0.4rem;
   height: 40px;
-  font-size: 2rem;
+  font-size: 1.7rem;
+  padding-bottom: 0.4rem;
   border: 3px solid white;
   border-radius: 5px;
   color: white;
@@ -1164,7 +1164,6 @@ main {
 
 .cookie-banner {
   background-color: white;
-  border-top: 20px solid var(--UI-main);
   position: fixed;
   bottom: 5px;
   width: 90%;
@@ -1189,11 +1188,7 @@ main {
 }
 
 .cookie-warning {
-  border: 3px solid var(--delete);
-  background-color: var(--delete);
-  color: white;
-  text-align: center;
-  border-radius: 5px;
+  border-top: 1px solid var(--shadow);
 }
 
 .cookie-buttons {
@@ -1211,7 +1206,7 @@ main {
   padding: 1rem;
   border-radius: 5px;
   font-weight: bold;
-
+  cursor: pointer;
 }
 
 #accept {
@@ -1297,12 +1292,13 @@ main {
 .delete-card-close {
   border: 2px solid var(--BG-main);
   border-radius: 5px;
-  padding: 0.1rem 0.2rem;
+  padding: 0.1rem 0.3rem 0.3rem 0.3rem;
   background-color: var(--delete);
   color: white;
   font-weight: bold;
   cursor: pointer;
   margin-bottom: 0.5rem;
+  font-size: 20px;
 }
 
 .delete-card form {
@@ -1334,7 +1330,8 @@ main {
 .delete-card-button {
   background-color: var(--delete);
   color: white;
-  padding: 0.4rem;
+  padding: 0.6rem 1rem;
+  font-size: 18px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -1342,7 +1339,8 @@ main {
 .delete-card-noButton {
   background-color: grey;
   color: black;
-  padding: 0.4rem;
+  padding: 0.6rem 1rem;
+  font-size: 18px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -1565,6 +1563,10 @@ main {
 
   .cookie-banner {
     width: 50%;
+  }
+
+  .cookie-button {
+    margin-right: 1rem;
   }
 
   .cookie-buttons {
